# auto_check

./: .gitignore  README.md
backend/: .gitignore.txt  pyproject.toml  seed.py
backend/app/: database.py  main.py
backend/app/models/: car.py
backend/app/routers/: car_router.py
backend/app/services/: car_service.py
frontend-next/: .gitignore.txt  package-lock.json  package.json
frontend-next/app/: layout.tsx  page.tsx
frontend-next/app/car/[id]/: page.tsx
frontend-next/app/catalogo/: page.tsx
frontend-next/app/components/: footer.tsx
frontend-next/app/services/: api.ts
frontend-next/app/types/: car.ts
