[project]
name = "backend"
version = "0.1.0"
description = "Backend projeto AutoCar"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[dependency-groups]
dev = [
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
test = "pytest -v"
seed = "python seed.py"